[gd_scene load_steps=6 format=1]

[ext_resource path="res://objects/player_bullet/player_bullet.gd" type="Script" id=1]
[ext_resource path="res://objects/player_bullet/player_bullet_trail.png" type="Texture" id=2]
[ext_resource path="res://objects/player_bullet/player_bullet.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Animation" id=2]

resource/name = "hit"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("shoot_trail:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.5, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shoot_trail:transform/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("shoot_head:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("shoot_head:transform/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 0.25 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -64 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("shoot_head:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0.5 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free()"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("shoot_trail:transform/pos")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 0.25 ),
"update": 0,
"values": [ Vector2( -8.5, 8 ), Vector2( -8.5, -48 ) ]
}

[node name="shoot" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
SPEED = 1000
DAMAGE = 1

[node name="shoot_trail" type="Sprite" parent="."]

visibility/opacity = 1.5
transform/pos = Vector2( -8.5, 8 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="shoot_head" type="Sprite" parent="."]

texture = ExtResource( 3 )

[node name="visibility" type="VisibilityNotifier2D" parent="."]

rect = Rect2( -10, -10, 20, 20 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="hit_ani" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hit = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="body_enter" from="." to="." method="_on_shoot_body_enter"]

[connection signal="exit_screen" from="visibility" to="." method="_on_visibility_exit_screen"]


